--- a/image/templates/helm/stackrox-central/templates/01-central-01-license-secret.yaml
+++ b/image/templates/helm/stackrox-central/templates/01-central-01-license-secret.yaml
@@ -8,10 +8,11 @@ metadata:
   name: central-license
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "srox.defaultLabels" . | nindent 4 }}
+    {{- include "srox.labels" (list . "secret" "central-license") | nindent 4 }}
   annotations:
-    {{- include "srox.defaultAnnotations" . | nindent 4 }}
+    {{- include "srox.annotations" (list . "secret" "central-license") | nindent 4 }}
     "helm.sh/hook": "pre-install,pre-upgrade"
+    "helm.sh/resource-policy": "keep"
 type: Opaque
 stringData:
   license.lic: |
