--- a/image/templates/helm/stackrox-central/templates/02-scanner-00-serviceaccount.yaml
+++ b/image/templates/helm/stackrox-central/templates/02-scanner-00-serviceaccount.yaml
@@ -8,9 +8,9 @@ metadata:
   name: scanner
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "srox.defaultLabels" . | nindent 4 }}
+    {{- include "srox.labels" (list . "serviceaccount" "scanner") | nindent 4 }}
   annotations:
-    {{- include "srox.defaultAnnotations" . | nindent 4 }}
+    {{- include "srox.annotations" (list . "serviceaccount" "scanner") | nindent 4 }}
 imagePullSecrets:
 {{- range $secretName := ._rox.imagePullSecrets._names }}
 - name: {{ quote $secretName }}
