--- a/image/templates/helm/stackrox-central/templates/00-image-pull-secret.yaml
+++ b/image/templates/helm/stackrox-central/templates/00-image-pull-secret.yaml
@@ -8,9 +8,9 @@ metadata:
   name: stackrox
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "srox.defaultLabels" . | nindent 4 }}
+    {{- include "srox.labels" (list . "secret" "stackrox") | nindent 4 }}
   annotations:
-    {{- include "srox.defaultAnnotations" . | nindent 4 }}
+    {{- include "srox.annotations" (list . "secret" "stackrox") | nindent 4 }}
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/resource-policy": keep
 data:
