--- a/image/templates/helm/stackrox-central/templates/00-proxy-config.yaml
+++ b/image/templates/helm/stackrox-central/templates/00-proxy-config.yaml
@@ -7,9 +7,9 @@ metadata:
   name: proxy-config
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "srox.defaultLabels" . | nindent 4 }}
+    {{- include "srox.labels" (list . "secret" "proxy-config") | nindent 4 }}
   annotations:
-    {{- include "srox.defaultAnnotations" . | nindent 4 }}
+    {{- include "srox.annotations" (list . "secret" "proxy-config") | nindent 4 }}
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/resource-policy": "keep"
 type: Opaque
