--- a/image/templates/helm/stackrox-central/templates/01-central-00-serviceaccount.yaml
+++ b/image/templates/helm/stackrox-central/templates/01-central-00-serviceaccount.yaml
@@ -6,9 +6,9 @@ metadata:
   name: central
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "srox.defaultLabels" . | nindent 4 }}
+    {{- include "srox.labels" (list . "serviceaccount" "central") | nindent 4 }}
   annotations:
-    {{- include "srox.defaultAnnotations" . | nindent 4 }}
+    {{- include "srox.annotations" (list . "serviceaccount" "central") | nindent 4 }}
 imagePullSecrets:
 {{- range $secretName := ._rox.imagePullSecrets._names }}
 - name: {{ quote $secretName }}
