--- a/image/templates/helm/stackrox-central/templates/01-central-05-tls-secret.yaml
+++ b/image/templates/helm/stackrox-central/templates/01-central-05-tls-secret.yaml
@@ -8,9 +8,9 @@ metadata:
   name: central-tls
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "srox.defaultLabels" . | nindent 4 }}
+    {{- include "srox.labels" (list . "secret" "central-tls") | nindent 4 }}
   annotations:
-    {{- include "srox.defaultAnnotations" . | nindent 4 }}
+    {{- include "srox.annotations" (list . "secret" "central-tls") | nindent 4 }}
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/resource-policy": "keep"
 type: Opaque
