--- a/image/templates/helm/stackrox-central/templates/01-central-06-default-tls-cert-secret.yaml
+++ b/image/templates/helm/stackrox-central/templates/01-central-06-default-tls-cert-secret.yaml
@@ -1,6 +1,6 @@
 {{- include "srox.init" . -}}
 
-{{ if ._rox.central.defaultTLSCert }}
+{{ if ._rox.central._defaultTLS }}
 
 apiVersion: v1
 kind: Secret
@@ -8,15 +8,15 @@ metadata:
   name: central-default-tls-cert
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "srox.defaultLabels" . | nindent 4 }}
+    {{- include "srox.labels" (list . "secret" "central-default-tls-cert") | nindent 4 }}
   annotations:
-    {{- include "srox.defaultAnnotations" . | nindent 4 }}
+    {{- include "srox.annotations" (list . "secret" "central-default-tls-cert") | nindent 4 }}
     "helm.sh/hook": "pre-install,pre-upgrade"
 type: kubernetes.io/tls
 stringData:
   tls.crt: |
-    {{- ._rox.central._defaultTLSCert.Cert | nindent 4 }}
+    {{- ._rox.central._defaultTLS.Cert | nindent 4 }}
   tls.key:
-    {{- ._rox.central._defaultTLSCert.Key | nindent 4 }}
+    {{- ._rox.central._defaultTLS.Key | nindent 4 }}
 
 {{- end }}
