--- a/image/templates/helm/stackrox-central/templates/01-central-09-endpoints-config.yaml
+++ b/image/templates/helm/stackrox-central/templates/01-central-09-endpoints-config.yaml
@@ -6,9 +6,9 @@ metadata:
   name: central-endpoints
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "srox.defaultLabels" . | nindent 4 }}
+    {{- include "srox.labels" (list . "configmap" "central-endpoints") | nindent 4 }}
   annotations:
-    {{- include "srox.defaultAnnotations" . | nindent 4 }}
+    {{- include "srox.annotations" (list . "configmap" "central-endpoints") | nindent 4 }}
 data:
   endpoints.yaml: |
     {{- ._rox.central._endpointsConfig | nindent 4 }}
