--- a/image/templates/helm/stackrox-central/templates/02-scanner-02-db-password.yaml
+++ b/image/templates/helm/stackrox-central/templates/02-scanner-02-db-password.yaml
@@ -10,9 +10,9 @@ metadata:
   name: scanner-db-password
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "srox.defaultLabels" . | nindent 4 }}
+    {{- include "srox.labels" (list . "secret" "scanner-db-password") | nindent 4 }}
   annotations:
-    {{- include "srox.defaultAnnotations" . | nindent 4 }}
+    {{- include "srox.annotations" (list . "secret" "scanner-db-password") | nindent 4 }}
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/resource-policy": keep
 type: Opaque
