--- a/image/templates/helm/stackrox-central/templates/02-scanner-03-tls-secrets.yaml
+++ b/image/templates/helm/stackrox-central/templates/02-scanner-03-tls-secrets.yaml
@@ -10,9 +10,9 @@ metadata:
   name: scanner-tls
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "srox.defaultLabels" . | nindent 4 }}
+    {{- include "srox.labels" (list . "secret" "scanner-tls") | nindent 4 }}
   annotations:
-    {{- include "srox.defaultAnnotations" . | nindent 4 }}
+    {{- include "srox.annotations" (list . "secret" "scanner-tls") | nindent 4 }}
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/resource-policy": keep
 type: Opaque
@@ -36,9 +36,9 @@ metadata:
   name: scanner-db-tls
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "srox.defaultLabels" . | nindent 4 }}
+    {{- include "srox.labels" (list . "secret" "scanner-db-tls") | nindent 4 }}
   annotations:
-    {{- include "srox.defaultAnnotations" . | nindent 4 }}
+    {{- include "srox.annotations" (list . "secret" "scanner-db-tls") | nindent 4 }}
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/resource-policy": "keep"
 type: Opaque
