--- a/image/templates/helm/stackrox-central/templates/99-generated-values.yaml
+++ b/image/templates/helm/stackrox-central/templates/99-generated-values.yaml
@@ -8,9 +8,9 @@ metadata:
   name: {{ ._rox._state.generatedName }}
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "srox.defaultLabels" . | nindent 4 }}
+    {{- include "srox.labels" (list . "secret" "generated-helm-config") | nindent 4 }}
   annotations:
-    {{- include "srox.defaultAnnotations" . | nindent 4 }}
+    {{- include "srox.annotations" (list . "secret" "generated-helm-config") | nindent 4 }}
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/resource-policy": "keep"
     "helm.sh/hook-delete-policy": "never"
