--- a/scripts/ci/clair/config.yaml
+++ b/scripts/ci/clair/config.yaml
@@ -54,7 +54,7 @@ clair:
   updater:
     # Frequency the database will be updated with vulnerabilities from the default data sources
     # The value 0 disables the updater entirely.
-    interval: 2h
+    interval: 0
 
   notifier:
     # Number of attempts before the notification is marked as failed to be sent
