--- a/licenses/config.yaml
+++ b/licenses/config.yaml
@@ -8,12 +8,11 @@ generators:
     allowNoNodeLimit: true
     allowNoBuildFlavorRestriction: true
     deploymentEnvironments:
-      - gcp/ultra-current-825
+      - gcp/srox-temp-dev-test # Infra project
       - azure/66c57ff5-f49f-4510-ae04-e26d3ad2ee63
-      - aws/051999192406
+      - aws/051999192406  # setup-automation
       - aws/880732477823  # k@stackrox.com
-      - aws/522993616158  # rhama@stackrox.com
-      - aws/598979716678  # akshat@stackrox.com
+      - aws/393282794030  # gavin@stackrox.com
 - name: ci
   key:
     keyResourceId: "projects/stackrox-dev/locations/global/keyRings/licensing-ci/cryptoKeys/ci-license-signer/cryptoKeyVersions/1"
@@ -44,7 +43,7 @@ generators:
     maxNodeLimit: 50
     allowNoBuildFlavorRestriction: true
     deploymentEnvironments:
-      - gcp/ultra-current-825
+      - gcp/srox-temp-sales-demos
       - azure/66c57ff5-f49f-4510-ae04-e26d3ad2ee63
       - aws/051999192406
 datastore:
