--- a/ui/packages/ui-components/package.json
+++ b/ui/packages/ui-components/package.json
@@ -43,10 +43,12 @@
     },
     "dependencies": {
         "@tippyjs/react": "^4.1.0",
+        "formik": "^2.1.5",
         "initials": "^3.1.0",
         "prop-types": "^15.7.2",
         "react-feather": "^2.0.8",
-        "tippy.js": "^6.2.6"
+        "tippy.js": "^6.2.6",
+        "yup": "^0.29.3"
     },
     "devDependencies": {
         "@babel/core": "^7.11.1",
