CI: Enable admission control for openshift-rhel (#6588)

--- a/qa-tests-backend/helm/values.openshift.yaml
+++ b/qa-tests-backend/helm/values.openshift.yaml
@@ -17,8 +17,8 @@ image:
 config:
   collectionMethod: EBPF
   admissionControl:
-    createService: false
-    listenOnUpdates: false
+    createService: true
+    listenOnUpdates: true
     enableService: false
     enforceOnUpdates: false
     scanInline: false
