--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -554,6 +554,27 @@ commands:
             cci-export UPGRADE_CLUSTER_ID << parameters.upgrade-cluster-id >>
             make -C qa-tests-backend upgrade-test
 
+  validate-upgrade-and-check-logs-with-bouncing:
+    description: "Validates the upgrade was successful against upgrade tests, bounces Central, then repeats"
+    parameters:
+      upgrade-cluster-id:
+        type: string
+      desc:
+        type: string
+    steps:
+      - validate-upgrade:
+          upgrade-cluster-id: "<< parameters.upgrade-cluster-id >>"
+          desc: "<< parameters.desc >> (pre bounce)"
+      - check-stackrox-logs:
+          collect: true
+      - *bounceCentral
+      - *waitForAPI
+      - validate-upgrade:
+          upgrade-cluster-id: "<< parameters.upgrade-cluster-id >>"
+          desc: "<< parameters.desc >> (post bounce)"
+      - check-stackrox-logs:
+          collect: true
+
   check-label-exists-or-skip:
     description: "Checks GitHub for the given label, and skips the test if we're on a PR and the label is NOT present."
     parameters:
@@ -3443,40 +3464,9 @@ jobs:
             roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db restore --timeout 2m 41.4-upgrade-db.zip
 
       - *waitForAPI
-      - validate-upgrade:
+      - validate-upgrade-and-check-logs-with-bouncing:
           upgrade-cluster-id: "ff725187-e4f3-4d10-b5bd-021fc19bf108"
           desc: "Validate restore from 41.4 to current head"
-
-      - check-stackrox-logs:
-          collect: true
-
-      - *bounceCentral
-      - *waitForAPI
-      - validate-upgrade:
-          upgrade-cluster-id: "ff725187-e4f3-4d10-b5bd-021fc19bf108"
-          desc: "Validate Central bounces and comes back up successfully"
-      - check-stackrox-logs:
-          collect: true
-
-      - run:
-          name: Restore 41.4 backup to current head
-          command: |
-            roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db restore --timeout 2m 41.4-upgrade-db.zip
-
-      - *waitForAPI
-      - validate-upgrade:
-          upgrade-cluster-id: "ff725187-e4f3-4d10-b5bd-021fc19bf108"
-          desc: "Validate 41.4 restore to RocksDB"
-      - check-stackrox-logs:
-          collect: true
-
-      - *bounceCentral
-      - *waitForAPI
-      - validate-upgrade:
-          upgrade-cluster-id: "ff725187-e4f3-4d10-b5bd-021fc19bf108"
-          desc: "Validate RocksDB Bouncing"
-      - check-stackrox-logs:
-          collect: true
 
       - run:
           name: Restore 44 BadgerDB backup to current head
@@ -3484,19 +3474,9 @@ jobs:
             roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db restore --timeout 2m badgerdb-44-backup.zip
 
       - *waitForAPI
-      - validate-upgrade:
+      - validate-upgrade-and-check-logs-with-bouncing:
           upgrade-cluster-id: "ff725187-e4f3-4d10-b5bd-021fc19bf108"
           desc: "Validate 44 restore to RocksDB from BadgerDB"
-      - check-stackrox-logs:
-          collect: true
-
-      - *bounceCentral
-      - *waitForAPI
-      - validate-upgrade:
-          upgrade-cluster-id: "ff725187-e4f3-4d10-b5bd-021fc19bf108"
-          desc: "Validate RocksDB Bouncing"
-      - check-stackrox-logs:
-          collect: true
 
       - run:
           name: Restore 44 RocksDB backup to current head
@@ -3504,19 +3484,9 @@ jobs:
             roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db restore --timeout 2m rocksdb-44-backup.zip
 
       - *waitForAPI
-      - validate-upgrade:
+      - validate-upgrade-and-check-logs-with-bouncing:
           upgrade-cluster-id: "ff725187-e4f3-4d10-b5bd-021fc19bf108"
           desc: "Validate 44 restore to RocksDB from RocksDB"
-      - check-stackrox-logs:
-          collect: true
-
-      - *bounceCentral
-      - *waitForAPI
-      - validate-upgrade:
-          upgrade-cluster-id: "ff725187-e4f3-4d10-b5bd-021fc19bf108"
-          desc: "Validate RocksDB Bouncing"
-      - check-stackrox-logs:
-          collect: true
 
       - run:
           name: "Backup RocksDB"
@@ -3529,19 +3499,9 @@ jobs:
             roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db restore rocksdb-backup.zip
 
       - *waitForAPI
-      - validate-upgrade:
+      - validate-upgrade-and-check-logs-with-bouncing:
           upgrade-cluster-id: "ff725187-e4f3-4d10-b5bd-021fc19bf108"
-          desc: "Validate RocksDB Bouncing"
-      - check-stackrox-logs:
-          collect: true
-
-      - *bounceCentral
-      - *waitForAPI
-      - validate-upgrade:
-          upgrade-cluster-id: "ff725187-e4f3-4d10-b5bd-021fc19bf108"
-          desc: "Validate RocksDB Bouncing after restoring"
-      - check-stackrox-logs:
-          collect: true
+          desc: "Validate RocksDB after backup + restore"
 
       - run:
           name: Fetch bundle for the "remote" cluster in the DB
