Correct kernel module flag in CI cluster provisioning (#6611)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2401,7 +2401,7 @@ jobs:
       - check-backend-changes
 
       - check-master-or-tag-or-label:
-          label: ci-kernel-tests
+          label: ci-kernel-module-tests
           run-on-master: true
           run-on-tags: true
 
