Remove monitoring chart from dynamically managed charts (#6610)

--- a/deploy/charts/monitoring/Chart.yaml
+++ b/deploy/charts/monitoring/Chart.yaml
@@ -1,6 +1,6 @@
 name: monitoring
 description: StackRox Monitoring
-version: {{.Version}}
+version: 1.0.0
 maintainers:
   - name: stackrox
     email: support@stackrox.com
