--- a/deploy/charts/monitoring/templates/networkpolicy.yaml
+++ b/deploy/charts/monitoring/templates/networkpolicy.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: allow-ext-to-monitoring
-  namespace: {{.Values.namespace}}
+  namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/name: stackrox
 spec:
