--- a/deploy/charts/monitoring/templates/influxdb.yaml
+++ b/deploy/charts/monitoring/templates/influxdb.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: influxdb
-  namespace: {{.Values.namespace}}
+  namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/name: stackrox
 data:
