--- a/deploy/charts/monitoring/templates/service.yaml
+++ b/deploy/charts/monitoring/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: monitoring
-  namespace: {{.Values.namespace}}
+  namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/name: stackrox
 spec:
